TODO
* move file_io_handle from io handle to file
* change file header filetime conversion
* implement libfdatetime
* create API functions to access link information values

Refactor
* volume information read into separate subfunction
* network share information read into separate subfunction

Tools:
* replace filetime by libfdatetime

Library
* move libbfio handle from io handle to file
* update support check signature (pff)
* move shell item code into libfwsi

Release:
* check TODOs
* configure
 - check inclusion of libuna functions
 - check inclusion of libbfio functions
 - check inclusion of libfdatetime functions
* update manuals
* update macosx package files
* update msvcpp files

Deployment:
* create debian package files
* create codegear files

20100628
* updated common, libcstring, liberror, libnotify, libsystem
* updated libuna, libbfio, libfdatetime
* clean up
* added libfguid
* added support for libcstring and libfguid

20100619
* added libcstring
* updated common, liberror, libnotify, libuna, libbfio, libfdatetime, libsystem

20100114
* 2010 update
* updated common, liberror, libnotify, libsystem, libuna, libbfio, libfdatetime
* updates msvscpp files
* removed All rights reserved
* byte_stream update
* libnotify update
* updated guid.[ch]
* updated liblnk_libuna.h
* added liblnk_codepage.h
* change default codepage to 1252

20090913
* added seek offset 0 when reading file header

20090911
* updated libsystem

20090910
* changed file sigature detection

20090908
* worked on implementic API functions

20090907
* textual changes
* worked on msvscpp compilation
* cleaned msc and borlandc config files
* removed GUID generation code

20090906
* worked on libfdatetime integration

20090905
* initial version based
