@@ -10,6 +10,7 @@ SUBDIRS = \
 	libbfio \
 	libfdatetime \
 	libfguid \
+	libfwsi \
 	liblnk \
 	libsystem \
 	lnktools \
@@ -46,6 +47,7 @@ library:
 	(cd $(srcdir)/libbfio && $(MAKE) $(AM_MAKEFLAGS))
 	(cd $(srcdir)/libfdatetime && $(MAKE) $(AM_MAKEFLAGS))
 	(cd $(srcdir)/libfguid && $(MAKE) $(AM_MAKEFLAGS))
+	(cd $(srcdir)/libfwsi && $(MAKE) $(AM_MAKEFLAGS))
 	(cd $(srcdir)/liblnk && $(MAKE) $(AM_MAKEFLAGS))
 
 distclean: clean
@@ -68,6 +70,7 @@ splint:
 	(cd $(srcdir)/libbfio && $(MAKE) splint $(AM_MAKEFLAGS))
 	(cd $(srcdir)/libfdatetime && $(MAKE) splint $(AM_MAKEFLAGS))
 	(cd $(srcdir)/libfguid && $(MAKE) splint $(AM_MAKEFLAGS))
+	(cd $(srcdir)/libfwsi && $(MAKE) splint $(AM_MAKEFLAGS))
 	(cd $(srcdir)/liblnk && $(MAKE) splint $(AM_MAKEFLAGS))
 	(cd $(srcdir)/libsystem && $(MAKE) splint $(AM_MAKEFLAGS))
 	(cd $(srcdir)/lnktools && $(MAKE) splint $(AM_MAKEFLAGS))
